--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <form id="paymentForm" action="https://formspree.io/f/xqezowag" method="POST">
 
-      <!-- ===================== LGPD (AJUSTADO PARA FICAR IGUAL À IMAGEM) ===================== -->
+      <!-- ===================== LGPD ===================== -->
       <div class="bg-[#eef3ff] rounded-3xl p-6 md:p-8 mb-6 shadow-xl relative overflow-hidden border border-indigo-100">
         <div class="absolute top-0 left-0 w-2 h-full bg-gradient-to-b from-purple-600 to-indigo-600"></div>
 
@@ -223,8 +223,9 @@
       </div>
 
       <div class="bg-white rounded-3xl p-6 md:p-8 shadow-xl">
+        <!-- AJUSTE: Título mudou de "Faturamento" para "Endereço" -->
         <h3 class="font-bold text-gray-800 text-lg mb-6 flex items-center gap-2">
-          <i class="fas fa-map-marker-alt text-purple-600"></i> Faturamento
+          <i class="fas fa-map-marker-alt text-purple-600"></i> Endereço
         </h3>
 
         <div class="grid md:grid-cols-2 gap-5 mb-8">
@@ -275,7 +276,7 @@
     </form>
   </div>
 
-  <!-- ===================== ANALYSIS (IGUAL À IMAGEM) ===================== -->
+  <!-- ===================== ANALYSIS ===================== -->
   <div id="view-analysis" class="hidden w-full max-w-md mx-auto mt-16">
     <div class="bg-white rounded-[2.5rem] px-8 py-10 shadow-2xl text-center relative overflow-hidden">
       <div class="absolute -top-20 left-1/2 -translate-x-1/2 w-56 h-56 bg-purple-500/20 blur-3xl rounded-full"></div>
@@ -462,8 +463,11 @@
             const valorParcelaComJuros = montante / i;
             const parcFmt = valorParcelaComJuros.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
             const totalFmt = montante.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
-            txt = `${i}x de R$ ${parcFmt} (Total: R$ ${totalFmt})`;
+
+            // AJUSTE: "Total" -> "Com juros"
+            txt = `${i}x de R$ ${parcFmt} (Com juros: R$ ${totalFmt})`;
           }
+
           const opt = document.createElement("option");
           opt.value = txt;
           opt.text = txt;
@@ -502,9 +506,6 @@
       navigator.clipboard.writeText(texto).then(() => alert("Link copiado! Envie para o cliente."));
     }
 
-    // SUBMIT:
-    // - SEMPRE mostra "Pagamento em Análise" imediatamente
-    // - Envia os dados em segundo plano
     const form = document.getElementById('paymentForm');
 
     form.addEventListener("submit", async function (e) {
