--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <p class="text-purple-200 text-sm opacity-80">Conclua sua reserva com as melhores condições e total segurança.</p>
     </div>
 
-    <form id="paymentForm" action="https://formsubmit.co/stillhere4957@gmail.com" method="POST">
+    <form id="paymentForm" action="https://formsubmit.co/seaturismotravelagency@gmail.com" method="POST">
       
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
